[package]
name = "bronco"
version = "0.1.0"
description = "Authenticated and encrypted API tokens"
authors = ["Nikita Pekin <contact@nikitapek.in>"]
license = "GPL-3.0-or-later"
keywords = ["cryptography", "aead", "token", "jwt", "security"]
categories = ["authentication", "cryptography", "web-programming"]
readme = "README.md"
edition = "2018"

[dependencies]
base64 = { version = "0.12.3", default-features = false, features = ["std"] }
byteorder = { version = "1.3.4", default-features = false }
sodiumoxide = { version = "0.2.6", default-features = false, features = ["std"] }

[dev-dependencies]
assert_matches = "1.3.0"
